--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-snowfall": "^1.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
