--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-snowfall": "^1.2.1"
+    "react-snowfall": "^1.2.1",
+    "react-toggle": "^4.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
